--- a/index.html
+++ b/index.html
@@ -89,14 +89,15 @@
 					
 					<p class="wow fadeInLeft" style="text-align:justify;">
 						Namaste! I am Akarsh Srivastava. Currently a third year Undergraduate student 
-						pursuing Computer Science & Engineering from ' Indian Institute of Technology(Indian School of Mines) Dhanbad '.<br><br>
+						pursuing B.Tech (Hons.) in Computer Science & Engineering from ' Indian Institute of Technology(Indian School of Mines) Dhanbad '.<br><br>
 
 						I consider myself a cheerful and optimistic person, usually have a positive attitude facing life.
 						I am attentive, affectionate and helpful to people around me.<br><br>
-						Being a music-movie enthusiast, I find it easy to crack conversation with others who share the similar interests.Big fan of Game of Thrones TV series. 
+						Being a music-movie enthusiast, I find it easy to crack conversation with those who share similar interests. Big fan of Game of Thrones TV series. 
 						I developed passion for story-poetry writing and designing in my high school days and 
 						have been loyal to it since then. <br><br>
-						I do not know what I will be, all I know is what I am: A simple boy working hard to make his presence worthwhile. I believe everyone is born with a reason.
+						
+						Firm believer of the saying,  'The Best is yet to come'.
 
 					</p>
 
