--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
 					<div class="row">
 						
 						<div id="pro1" class="col-sm-6 col-lg-6 col-sm-6 wow fadeInLeft">
-							<img class="img-responsive" src="desk.jpg">
+							<a href="project.html"><img class="img-responsive" src="desk.jpg"></a>
 							<a href="project.html"><h2>Projects</h2></a>
 						</div>
 						<div id="pro1" class="col-sm-6  col-lg-6 col-sm-6 wow fadeInRight">
-							<img class="img-responsive" src="tomorrowland.jpg">
+							<a href="project.html#myinterest"><img class="img-responsive" src="tomorrowland.jpg"></a>
 							<a href="project.html#myinterest"><h2>Interests</h2></a>
 						</div>
 
@@ -132,11 +132,11 @@
 					<div class="row">
 						
 						<div id="pro1" class="col-sm-6 col-lg-6 col-sm-6 wow fadeInLeft">
-							<img class="img-responsive" src="cv.jpg">
+							<a href="project.html#cv"><img class="img-responsive" src="cv.jpg"></a>
 							<a href="project.html#cv"><h2>Curriculum Vitae</h2></a>
 						</div>
 						<div id="pro1" class="col-sm-6  col-lg-6 col-sm-6 wow fadeInRight">
-							<img class="img-responsive" src="contact.jpg">
+							<a href="project.html#contact"><img class="img-responsive" src="contact.jpg"></a>
 							<a href="project.html#contact"><h2>Get in Touch</h2></a>
 						</div>
 
